// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DailyStepsScreen should render FitKit permissions screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={false}
    isDoneToday={false}
    isLoading={false}
    isOnline={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          isLight={false}
          onPressLeftIcon={[MockFunction]}
        />,
        <Pad
          height={60}
        />,
        <TouchableOpacity
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            isGrayScale={true}
            isLoading={false}
          />
        </TouchableOpacity>,
        <DailyStepsFitKitAuthorise
          onPress={[MockFunction]}
        />,
        false,
        <View
          style={
            Object {
              "bottom": 34,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="darker"
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "footerImage": "gray_forest",
      "style": Object {
        "backgroundColor": "#FFF",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "isLight": false,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            isGrayScale={true}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isGrayScale": true,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="darker"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "bottom": 34,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "darker",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            isLight={false}
            onPressLeftIcon={[MockFunction]}
          />,
          <Pad
            height={60}
          />,
          <TouchableOpacity
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              isGrayScale={true}
              isLoading={false}
            />
          </TouchableOpacity>,
          <DailyStepsFitKitAuthorise
            onPress={[MockFunction]}
          />,
          false,
          <View
            style={
              Object {
                "bottom": 34,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "gray_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "isLight": false,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              isGrayScale={true}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isGrayScale": true,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 34,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "darker",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render FitKit unavailable screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={false}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnline={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          isLight={false}
          onPressLeftIcon={[MockFunction]}
        />,
        <Pad
          height={60}
        />,
        <TouchableOpacity
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            isGrayScale={false}
            isLoading={false}
          />
        </TouchableOpacity>,
        <DailyStepsFitKitUnavailable />,
        false,
        <View
          style={
            Object {
              "bottom": 34,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="darker"
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "footerImage": "large_forest",
      "style": Object {
        "backgroundColor": "#FFF",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "isLight": false,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            isGrayScale={false}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isGrayScale": false,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="darker"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "bottom": 34,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "darker",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            isLight={false}
            onPressLeftIcon={[MockFunction]}
          />,
          <Pad
            height={60}
          />,
          <TouchableOpacity
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacity>,
          <DailyStepsFitKitUnavailable />,
          false,
          <View
            style={
              Object {
                "bottom": 34,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "large_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "isLight": false,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              isGrayScale={false}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isGrayScale": false,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 34,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "darker",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render daily streak 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    displayStreak={true}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnline={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          isLight={false}
          onPressLeftIcon={[MockFunction]}
        />,
        <Pad
          height={80}
        />,
        <TouchableOpacity
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            isGrayScale={false}
            isLoading={false}
          />
        </TouchableOpacity>,
        <DailyStepsOnline
          coinsToday={0}
          isLight={false}
          onCtaPress={null}
          steps={0}
        />,
        <Streak
          currentStreak={0}
          isFinished={false}
          maxStreak={4}
          onPress={[MockFunction]}
          type="forest"
        />,
        <View
          style={
            Object {
              "bottom": 34,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "footerImage": "large_forest",
      "style": Object {
        "backgroundColor": "#FFF",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "isLight": false,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 80,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            isGrayScale={false}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isGrayScale": false,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "coinsToday": 0,
          "isLight": false,
          "onCtaPress": null,
          "steps": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "currentStreak": 0,
          "isFinished": false,
          "maxStreak": 4,
          "onPress": [MockFunction],
          "type": "forest",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "bottom": 34,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "light",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            isLight={false}
            onPressLeftIcon={[MockFunction]}
          />,
          <Pad
            height={80}
          />,
          <TouchableOpacity
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacity>,
          <DailyStepsOnline
            coinsToday={0}
            isLight={false}
            onCtaPress={null}
            steps={0}
          />,
          <Streak
            currentStreak={0}
            isFinished={false}
            maxStreak={4}
            onPress={[MockFunction]}
            type="forest"
          />,
          <View
            style={
              Object {
                "bottom": 34,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "large_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "isLight": false,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 80,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              isGrayScale={false}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isGrayScale": false,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "coinsToday": 0,
            "isLight": false,
            "onCtaPress": null,
            "steps": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "currentStreak": 0,
            "isFinished": false,
            "maxStreak": 4,
            "onPress": [MockFunction],
            "type": "forest",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 34,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "light",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render default values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnline={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          isLight={false}
          onPressLeftIcon={[MockFunction]}
        />,
        <Pad
          height={60}
        />,
        <TouchableOpacity
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            isGrayScale={false}
            isLoading={false}
          />
        </TouchableOpacity>,
        <DailyStepsOnline
          coinsToday={0}
          isLight={false}
          onCtaPress={[MockFunction]}
          steps={0}
        />,
        false,
        <View
          style={
            Object {
              "bottom": 34,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "footerImage": "large_forest",
      "style": Object {
        "backgroundColor": "#FFF",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "isLight": false,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            isGrayScale={false}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isGrayScale": false,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "coinsToday": 0,
          "isLight": false,
          "onCtaPress": [MockFunction],
          "steps": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "bottom": 34,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "light",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            isLight={false}
            onPressLeftIcon={[MockFunction]}
          />,
          <Pad
            height={60}
          />,
          <TouchableOpacity
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              isGrayScale={false}
              isLoading={false}
            />
          </TouchableOpacity>,
          <DailyStepsOnline
            coinsToday={0}
            isLight={false}
            onCtaPress={[MockFunction]}
            steps={0}
          />,
          false,
          <View
            style={
              Object {
                "bottom": 34,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "large_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "isLight": false,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              isGrayScale={false}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isGrayScale": false,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "coinsToday": 0,
            "isLight": false,
            "onCtaPress": [MockFunction],
            "steps": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 34,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "light",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render loading screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={true}
    isOnline={true}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          isLight={false}
          onPressLeftIcon={[MockFunction]}
        />,
        <Pad
          height={60}
        />,
        <TouchableOpacity
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            isGrayScale={false}
            isLoading={true}
          />
        </TouchableOpacity>,
        <DailyStepsLoading />,
        false,
        <View
          style={
            Object {
              "bottom": 34,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "footerImage": "large_forest",
      "style": Object {
        "backgroundColor": "#FFF",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "isLight": false,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            isGrayScale={false}
            isLoading={true}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isGrayScale": false,
            "isLoading": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="light"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "bottom": 34,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "light",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            isLight={false}
            onPressLeftIcon={[MockFunction]}
          />,
          <Pad
            height={60}
          />,
          <TouchableOpacity
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              isGrayScale={false}
              isLoading={true}
            />
          </TouchableOpacity>,
          <DailyStepsLoading />,
          false,
          <View
            style={
              Object {
                "bottom": 34,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "large_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "isLight": false,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              isGrayScale={false}
              isLoading={true}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isGrayScale": false,
              "isLoading": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="light"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 34,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "light",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`DailyStepsScreen should render offline screen 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DailyStepsScreen
    coinsToday={0}
    currentStreak={0}
    fitKitAvailable={true}
    hasPermission={true}
    isDoneToday={false}
    isLoading={false}
    isOnline={false}
    labels={Array []}
    lastUpdate="thing"
    maxStreak={4}
    onAuthoriseFitKitPress={[MockFunction]}
    onCoinPress={[MockFunction]}
    onCtaPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    onStreakPress={[MockFunction]}
    steps={0}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          isLight={false}
          onPressLeftIcon={[MockFunction]}
        />,
        <Pad
          height={60}
        />,
        <TouchableOpacity
          activeOpacity={1}
          onPress={[MockFunction]}
        >
          <YuCoin
            isGrayScale={true}
            isLoading={false}
          />
        </TouchableOpacity>,
        <DailyStepsOffline
          isLight={false}
          lastUpdate="thing"
        />,
        false,
        <View
          style={
            Object {
              "bottom": 34,
              "position": "absolute",
            }
          }
        >
          <NavBar
            activeIndex={0}
            colour="darker"
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "footerImage": "gray_forest",
      "style": Object {
        "backgroundColor": "#FFF",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "isLight": false,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 60,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 1,
          "children": <YuCoin
            isGrayScale={true}
            isLoading={false}
          />,
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isGrayScale": true,
            "isLoading": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "isLight": false,
          "lastUpdate": "thing",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="darker"
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "bottom": 34,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "darker",
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            isLight={false}
            onPressLeftIcon={[MockFunction]}
          />,
          <Pad
            height={60}
          />,
          <TouchableOpacity
            activeOpacity={1}
            onPress={[MockFunction]}
          >
            <YuCoin
              isGrayScale={true}
              isLoading={false}
            />
          </TouchableOpacity>,
          <DailyStepsOffline
            isLight={false}
            lastUpdate="thing"
          />,
          false,
          <View
            style={
              Object {
                "bottom": 34,
                "position": "absolute",
              }
            }
          >
            <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "footerImage": "gray_forest",
        "style": Object {
          "backgroundColor": "#FFF",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "isLight": false,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 60,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 1,
            "children": <YuCoin
              isGrayScale={true}
              isLoading={false}
            />,
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isGrayScale": true,
              "isLoading": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isLight": false,
            "lastUpdate": "thing",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "bottom": 34,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "darker",
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
